--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>NYC Taxi Trip Data Explorer</title>
     <meta name="description" content="Explore and analyze NYC taxi trip patterns with interactive visualizations and real-time data insights" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+  <!-- Favicon removed to avoid showing Replit logo -->
+    <!-- Inline SVG favicon to override any cached Replit icon -->
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20100%20100'%3E%3Crect%20width='100'%20height='100'%20fill='%231e40af'/%3E%3C/svg%3E" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
